# mdns_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: main.yml
example/: discovery.cpp  query.cpp  service.cpp  service_with_logger.cpp
include/mdns_cpp/: defs.hpp  macros.hpp  mdns.hpp
src/: logger.cpp  mdns.cpp  mdns.h  utils.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
